[package]
name = "axum-insights"
version = "0.4.0"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "An Azure Application Insights exporter for axum via tracing."
readme = "README.md"
homepage = "https://github.com/twitchax/axum-insights"
repository = "https://github.com/twitchax/axum-insights"
keywords = ["axum", "application", "insights", "appinsights", "tracing"]
categories = ["web-programming"]

[dependencies]
tracing = { version = "0.1.40" }
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
#opentelemetry-application-insights = { version = "0.37.0", features = ["reqwest-client", "metrics", "live-metrics"] }
opentelemetry-application-insights = { git = "https://github.com/ebesirik/opentelemetry-application-insights.git", rev = "b397b28", features = ["reqwest-client", "metrics", "live-metrics"] }
tracing-opentelemetry = { version = "0.28.0" }
tracing-subscriber = { version = "0.3.17" }
futures = { version = "0.3.28" }
http = { version = "1.1.0" }
http-body-util = { version = "0.1.2" }
axum = { version = "0.7.9", features = ["macros"] }
hyper = { version = "1.4.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0.126" }
serde_json = { version = "1.0.64" }
tokio = { version = "1.43.0", features = ["rt", "macros", "signal", "parking_lot"] }
reqwest = { version = "0.12.5", features = ["blocking"] }